Fix calendar responsiveness; make sections that have slides in them have shorter width text as to not cut off arrows

--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,11 @@ i {
   color: white;
 }
 
+iframe {
+  width: 70vw;
+  height: 70vh;
+}
+
 .bold {
   font-weight: 800;
 }
